Project

General

Profile

Actions

Bug #50707

closed

mds: 32bit compilation fixes for PurgeQueue

Added by Duncan Bellamy about 3 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Category:
build
Target version:
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
pacific,octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

files_high_water is defined as uint64_t but when compiling on 32bit these max functions fail as they are both not considered uint64_t by gcc 10 even though they are

files_high_water = std::max(files_high_water,
static_cast<uint64_t>(in_flight.size()));

Compile output:

/builds/a16bitsysop/aports/community/ceph/src/ceph-16.2.3/src/mds/PurgeQueue.cc: In member function 'void PurgeQueue::_execute_item(const PurgeItem&, uint64_t)':
3899/builds/a16bitsysop/aports/community/ceph/src/ceph-16.2.3/src/mds/PurgeQueue.cc:598:70: error: no matching function for call to 'max(size_t&, uint64_t)'
3900  598 |                               static_cast<uint64_t>(in_flight.size()));
3901      |                                                                      ^


Related issues 2 (0 open2 closed)

Copied to Ceph - Backport #50850: octopus: mds: 32bit compilation fixes for PurgeQueueResolvedCory SnyderActions
Copied to Ceph - Backport #50851: pacific: mds: 32bit compilation fixes for PurgeQueueResolvedCory SnyderActions
Actions #1

Updated by Kefu Chai about 3 years ago

  • Status changed from New to Pending Backport
  • Pull request ID set to 41235
Actions #2

Updated by Kefu Chai about 3 years ago

  • Status changed from Pending Backport to Fix Under Review
Actions #3

Updated by Kefu Chai about 3 years ago

  • Description updated (diff)
Actions #4

Updated by Patrick Donnelly almost 3 years ago

  • Subject changed from mds: PurgeQueue.cc to mds: 32bit compilation fixes for PurgeQueue
  • Assignee set to Duncan Bellamy
  • Target version set to v17.0.0
  • Source set to Community (dev)
  • Backport set to pacific,octopus
Actions #5

Updated by Patrick Donnelly almost 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #6

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #50850: octopus: mds: 32bit compilation fixes for PurgeQueue added
Actions #7

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #50851: pacific: mds: 32bit compilation fixes for PurgeQueue added
Actions #8

Updated by Loïc Dachary over 2 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF