mds: PurgeQueue.cc fix for 32bit compilation

files_high_water is defined as uint64_t but when compiling on 32bit these max functions
fail as they are both not considered uint64_t by gcc 10 even though they are

  files_high_water = std::max(files_high_water,
                               static_cast<uint64_t>(in_flight.size()));

Fixes: https://tracker.ceph.com/issues/50707

Signed-off-by: Duncan Bellamy <dunk@denkimushi.com>
(cherry picked from commit 0b7f69252c7701f70d38cc6221d393cbd5a507a4)

Conflicts:
	src/mds/PurgeQueue.cc

Cherry-pick notes:
- Octopus did not previously have static_cast to uint64